kubernetes/manifests/confluence/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: confluence
  namespace: wiki
  labels:
    app: confluence
spec:
  replicas: 1
  selector:
    matchLabels:
      app: confluence
  template:
    metadata:
      labels:
        app: confluence
    spec:
      securityContext:
        runAsGroup: 2002
        runAsUser: 2002
        runAsNonRoot: true
      containers:
        - name: confluence
          image: atlassian/confluence:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8090
              name: http
          volumeMounts:
            - mountPath: /var/atlassian/application-data/confluence
              name: confluence-data
          readinessProbe:
            httpGet:
              path: /status
              port: http
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /status
              port: http
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              cpu: "1"
              memory: "3Gi"
            limits:
              cpu: "2"
              memory: "6Gi"
      volumes:
        - name: confluence-data
          persistentVolumeClaim:
            claimName: confluence-data
