kubernetes/manifests/confluence/service.yml
apiVersion: v1
kind: Service
metadata:
  name: confluence-service
  namespace: wiki
  labels:
    app: confluence
spec:
  type: ClusterIP
  selector:
    app: confluence
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8090
